--- a/src/app/ajouter-responsable/ajouter-responsable.component.html
+++ b/src/app/ajouter-responsable/ajouter-responsable.component.html
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="row mt-3 mb-2 mx-auto d-block">
-                        <button type="submit" class="btn btn-outline-primary mx-auto d-block">Ajouter</button>
+                        <button type="submit" class="mx-auto d-block">Ajouter</button>
                         <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
                           Erreur d'Inscription!<br />{{ errorMessage }}
                         </div>
