--- a/src/app/entite/entite.component.scss
+++ b/src/app/entite/entite.component.scss
@@ -32,6 +32,8 @@ button{
 background: none;
 border: 1px solid #4464ad!important;
 color: black!important;
+padding: 10px;
+border-radius: 8px;
 }
 button:hover{
   background-color: #4464ad;
