--- a/src/app/signale/signale.component.html
+++ b/src/app/signale/signale.component.html
@@ -8,7 +8,7 @@
               <div class="card mx-auto" >
                   <div class="card-body text-center">
                       <h3 class="card-title">{{sliste.length}}</h3>
-                      <h3 class="card-subtitle mb-2 text-muted" style="color: red!important;">Signales</h3>
+                      <h3 class="card-subtitle mb-2 text-muted" style="color: red!important;"><i class="bi bi-exclamation-diamond-fill mx-1"></i>Signales</h3>
                   </div>
               </div>
           </div>
@@ -23,12 +23,12 @@
               </div>
 
 
-              <div class="col-md-4 offset-md-4 ">
+              <!-- <div class="col-md-4 offset-md-4 ">
                   <form class="d-flex text-end mb-2">
                       <input type="search" class="form-control sh mx-auto" placeholder="Recherchez une dette" >
                       <button  type="submit">Rechercher</button>
                     </form>
-              </div>
+              </div> -->
           </div>
           <table class="table mx-auto text-center">
           <thead>
